crates/swc_ecma_parser/tests/test262-error-references/fail/e7d55d897a90564b.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/e7d55d897a90564b.js:1:12
  |
1 | function t(false) { }
  |            ^^^^^

